# vibe_cockpit

./: .gitignore  AGENTS.md  COMPREHENSIVE_PLAN_TO_MAKE_VC__GPT.md  Cargo.toml  Makefile  PROMPT_TO_MAKE_VC.md  README.md  build.rs  install.sh
.beads/: issues.jsonl
.beads/.br_history/: issues.20260310_012135_408631847.jsonl  issues.20260310_012931_327699696.jsonl  issues.20260310_013348_959482950.jsonl  issues.20260310_013806_302827555.jsonl  issues.20260310_014527_738970344.jsonl  issues.20260310_014957_112120984.jsonl  issues.20260310_020112_767548542.jsonl  issues.20260310_020137_394809113.jsonl  issues.20260310_020408_873318119.jsonl  issues.20260310_020430_997880273.jsonl  issues.20260310_020434_948107852.jsonl  issues.20260310_020448_672641477.jsonl  issues.20260310_020453_258278851.jsonl  issues.20260310_020511_365449875.jsonl  issues.20260310_020514_272720636.jsonl  issues.20260310_050715_748093292.jsonl  issues.20260310_051112_306740127.jsonl  issues.20260310_052839_725463556.jsonl  issues.20260310_053237_139866432.jsonl  issues.20260310_053247_395522471.jsonl  issues.20260310_053251_510222474.jsonl  issues.20260310_054227_960659264.jsonl  issues.20260312_181022_833844019.jsonl  issues.20260312_181330_515146813.jsonl  issues.20260312_181445_959595769.jsonl  issues.20260312_181543_823514319.jsonl  issues.20260312_183831_886237126.jsonl  issues.20260312_183845_837016467.jsonl  issues.20260312_184104_864664726.jsonl  issues.20260312_184116_182374252.jsonl  issues.20260312_184151_677672836.jsonl  issues.20260312_184629_040884336.jsonl  issues.20260312_184639_742461671.jsonl  issues.20260312_184655_021519335.jsonl  issues.20260312_190644_645421053.jsonl  issues.20260313_211223_655060088.jsonl  issues.20260313_211319_022633698.jsonl  issues.20260313_223112_332119717.jsonl  issues.20260313_232446_243212136.jsonl  issues.20260313_234635_918501828.jsonl  (+6 more)
.github/workflows/: ci.yml  release.yml
crates/vc_alert/: Cargo.toml
crates/vc_alert/src/: lib.rs
crates/vc_cli/: Cargo.toml
crates/vc_collect/: Cargo.toml
crates/vc_config/: Cargo.toml
crates/vc_config/src/: lib.rs
crates/vc_guardian/: Cargo.toml
crates/vc_knowledge/: Cargo.toml
crates/vc_mcp/: Cargo.toml
crates/vc_mcp/src/: lib.rs
crates/vc_oracle/: Cargo.toml
crates/vc_query/: Cargo.toml
crates/vc_query/src/: cost.rs  digest.rs  guardrails.rs  health.rs  lib.rs  nl.rs
crates/vc_store/: Cargo.toml
crates/vc_store/src/: lib.rs  migrations.rs  schema.rs
crates/vc_store/src/migrations/: 001_initial_schema.sql  002_machine_registry.sql  003_knowledge_base.sql  004_agent_dna.sql  005_experiments.sql  006_ntm_collector.sql  007_cost_attribution.sql  008_afsc_collector.sql  009_cloud_benchmarker.sql  010_retention_log.sql  011_collector_health.sql  012_health_scores.sql  013_alert_delivery_log.sql  014_autopilot_decisions.sql  015_incident_notes.sql  016_fleet_commands.sql  017_mined_sessions.sql  018_playbook_autogen.sql  019_incident_replay.sql  020_alert_routing.sql  021_adaptive_polling.sql  022_node_ingest.sql  023_redaction_events.sql  024_digest_reports.sql  025_collector_tables.sql  026_machine_status.sql  028_widen_byte_columns_to_bigint.sql
crates/vc_tui/: Cargo.toml
crates/vc_web/: Cargo.toml
crates/vc_web/src/: auth.rs  lib.rs
docs/schemas/: index.json  robot-envelope.json  robot-health.json  robot-status.json  robot-triage.json
src/: main.rs
tests/: collector_parsing.rs
tests/common/: mod.rs
tests/e2e/: README.md  coverage_manifest.json  lib.sh  migration_integrity.rs  run_all.sh  tui_rendering.rs
tests/logs/: collectors_test_beads_collect.err  collectors_test_beads_collect.json  collectors_test_beads_collect.out  collectors_test_caam_mock.err  collectors_test_caam_mock.json  collectors_test_caam_mock.out  collectors_test_cass_mock.err  collectors_test_cass_mock.json  collectors_test_cass_mock.out  collectors_test_caut_mock.err  collectors_test_caut_mock.json  collectors_test_caut_mock.out  collectors_test_collect_basic.err  collectors_test_collect_basic.json  collectors_test_collect_basic.out  collectors_test_collector_errors.err  collectors_test_collector_errors.json  collectors_test_collector_errors.out  collectors_test_config_validation.err  collectors_test_config_validation.json  (+34 more)
(+110 files in other folders)
