[package]
name = "vc_store"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "DuckDB storage layer for Vibe Cockpit"

[lints]
workspace = true

[dependencies]
vc_config.workspace = true
asupersync.workspace = true
asupersync-tokio-compat.workspace = true
duckdb.workspace = true
fsqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
anyhow.workspace = true
tempfile = "3"

[dev-dependencies]
proptest.workspace = true
mockall.workspace = true
